manifests/istio/auth-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"security.istio.io/v1beta1","kind":"AuthorizationPolicy","metadata":{"annotations":{},"name":"allow-authenticated-users","namespace":"istio-system"},"spec":{"action":"ALLOW","rules":[{"from":[{"source":{"requestPrincipals":["http://localhost:8080/realms/ZeroTrustLab/*"]}}]}],"selector":{"matchLabels":{"istio":"ingressgateway"}}}}
  name: allow-authenticated-users
  namespace: istio-system
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals:
        - http://localhost:8080/realms/ZeroTrustLab/*
  selector:
    matchLabels:
      istio: ingressgateway
